[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
[dependencies]
openssl = "0.10"
libc = "0.2.151"
sysinfo = "0.29.0"
psutil = "3.2.2"
native-tls = "0.2"
deno_bindgen = "0.8.1"
serde = { version = "1", features = ["derive"] }